@@ -1,48 +1,70 @@
 # DevOpsWebApp : Only a webapp
 
-mvn clean package
+1. signinin/signup to redhat (search for redhat jboss in google, you will get a link from google suggestion)
 
-mvn clean verify
+https://www.redhat.com/en/technologies/jboss-middleware/application-platform
 
-mvn clean test
+2. Products & services --> Jboss Development & management --> RegHat Jboss Enterprise App Platform
 
-mvn clean install
+4. Downloads --> select the version 7.1 or any version
 
-mvn tomcat7:deploy (Make sure tomcat server is online)
+5. uzip jboss-eap-7.1.0.zip
 
-mvn checkstyle:checkstyle checkstyle:check
+6. Setup the JBOSS_HOME in environment variables - like C:\Downloads\jboss\jboss-eap-7.1
 
-mvn checkstyle:checkstyle checkstyle:check -Dcheckstyle.failOnViolation=false
+7. open a command prompt at C:\Downloads\jboss\jboss-eap-7.1\bin
 
-mvn checkstyle:checkstyle checkstyle:check -Dcheckstyle.failOnError=false
+8. run the standalone.bat file
 
-mvn clean install -Pjacoco
+9. Once the server up, you will able to see the below message message in the log
 
-clean verify sonar:sonar -Psonar
+09:51:12,922 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0051: Admin console listening on http://0.0.0.0:9990
+09:51:12,923 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0025: JBoss EAP 7.1.0.GA (WildFly Core 3.0.10.Final-redhat-1) started in 31289ms - Started 482 of 711 services (359 services are lazy, passive or on-demand)
 
-clean verify sonar:sonar -Psonar,jacoco
+10. launch the URL in any browser: http://localhost:9990
 
+11. setup user --> open command prompt at bin directory
 
-Increase Heap size: -Xmx512m -XX:MaxPermSize=512m
+	run the bat file add-user.bat
+	
+	ex: ramkrishna DevOps#123
 
-### plugins
+	roles: admin
 
- mvn clean org.apache.maven.plugins:maven-compiler-plugin:3.1:compile
+12. launch the URL again in the browser: http://localhost:9990, this time it will ask you to entrer login creds.
 
- mvn clean compile org.apache.maven.plugins:maven-checkstyle-plugin:3.0.0:checkstyle
- 
- mvn clean compile org.apache.maven.plugins:maven-checkstyle-plugin:3.0.0:checkstyle org.apache.maven.plugins:maven-checkstyle-plugin:3.0.0:check
- 
- mvn clean compile checkstyle:checkstyle checkstyle:check
- 
- mvn clean checkstyle:checkstyle checkstyle:check install
- 
- jacoco - java code coverage
- 
-	 class wise
-	 
-	 method wise
-	 
-	 line wise
-	 
-	 block wise
+13. git clone or download a web app from https://github.com/venkatasykam/DevOpsWebApp
+
+	ex: git clone -b web-jboss https://github.com/venkatasykam/DevOpsWebApp
+
+14. configure jboss deploy plugin in maven pom.xml and run the command mvn clean install
+
+15. go to http://localhost:9990 --> Deployments --> there you should able to see your app.
+
+16. Run the app : http://localhost:8080/DevOpsWebApp
+
+		<plugin>
+			<groupId>org.wildfly.plugins</groupId>
+			<artifactId>wildfly-maven-plugin</artifactId>
+			<version>1.1.0.Final</version>
+			<configuration>
+				<force>true</force>
+				<hostname>localhost</hostname>
+				<username>ramkrishna</username>
+				<password>DevOps#123</password>
+				<port>9990</port>
+				<name>${project.artifactId}.war</name>
+				<fileNames>
+					<fileName>target/${project.artifactId}.war</fileName>
+				</fileNames>
+			</configuration>
+			<executions>
+				<execution>
+					<id>deploy</id>
+					<phase>package</phase>
+					<goals>
+						<goal>deploy</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
